--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <header class="header">
-    <div class="wrapper header__wrap">
+    <div class="header__wrap">
       <div class="logo">
-        <img src="img/images/logo.png" alt="Logo">
+        <img src="img/images/logo_big.png" alt="Logo">
       </div>
       <nav class="header__menu">
         <ul class="header__list">
@@ -151,7 +151,9 @@
     <section class="style">
       <div class="wrapper">
         <div class="style__title">
-          <p>Создайте интерьер вместе с «Волховец».<br>Выберите двери, а мы предложим функциональные решения в едином стиле. Завершить образ помогут аксессуары.</p>
+          Создайте интерьер вместе с «Волховец».<br>
+          Выберите двери, а мы предложим функциональные решения в едином стиле.<br>
+          Завершить образ помогут аксессуары.
         </div>
         <ul class="style__list">
           <li class="style__item">
