--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
   <footer class="footer">
     <div class="wrapper">
       <div class="footer__top">
-        <div class="footer__block">
+        <div class="footer__block footer__block--wide">
           <p class="footer__title">ДВЕРИ</p>
           <ul class="footer__list">
             <li><a href="#">Lignum</a></li>
@@ -364,7 +364,7 @@
           <a href="tel:+78162944640">+7 (8162) 94-46-40</a>
           <a href="mailto:corp@volhovez.natm.ru">corp@volhovez.natm.ru</a>
         </div>
-        <div class="footer__block">
+        <div class="footer__contacts">
           <p class="footer__title">СЛЕДИТЕ ЗА НАМИ</p>
           <ul class="social">
             <li class="social__item">
