--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
       <nav class="menu">
         <button type="button" class="menu__btn">Меню</button>
         <div class="menu__wrap">
+          <button type="button" class="menu__close"></button>
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Каталог</a>
+              <a href="#" class="menu__link menu__link--more">Каталог</a>
               <ul class="menu__sublist">
                 <li class="menu__subitem">
                   <a href="#" class="menu__sublink">Межкомнатные двери</a>
@@ -58,7 +59,7 @@
               <a href="#" class="menu__link">О компании</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Дизайнерам</a>
+              <a href="#" class="menu__link menu__link--more">Дизайнерам</a>
               <ul class="menu__sublist">
                 <li class="menu__subitem">
                   <a href="#" class="menu__sublink">Дизайнерам</a>
@@ -72,7 +73,7 @@
               <a href="#" class="menu__link">Новости</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Полезно</a>
+              <a href="#" class="menu__link menu__link--more">Полезно</a>
               <ul class="menu__sublist">
                 <li class="menu__subitem">
                   <a href="#" class="menu__sublink">Установка</a>
@@ -119,7 +120,7 @@
             <p>Контакты для розницы</p>
             <a href="tel:+78005059913">8 (800) 505-99-13</a>
             <a href="mailto:8800@volhovez.natm.ru">8800@volhovez.natm.ru</a>
-            <a href="#" class="menu__feedback">Обратная связь</a>
+            <a data-fancybox data-src="#feedback" href="javascript:;" class="menu__feedback">Обратная связь</a>
             <p>Волховец Контракт</p>
             <a href="tel:+78162944640">+7 (8162) 94-46-40</a>
             <a href="mailto:corp@volhovez.natm.ru">corp@volhovez.natm.ru</a>
